Fix table not fitting inside well in Chrome
'Remove' buttons were extending beyond the right edge of the well
because .form-inline .form-control width was auto and needed to be 100%.
This removes the now-inappropriate inline-form style used before these
fields were grouped into a table.

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -447,6 +447,9 @@ div.all_communities {
 				display: none;
 			}
 		}
+		.form-group {
+			margin-bottom: 0;
+		}
 	}
 	td,
 	th {
